# aws-ai-practitioner

./: .gitignore  bedrock.py  ec2-with-sgs.json  just-ec2.json  main.py  pyproject.toml  s3-bucket.yml  telegram_bot.py  test_event.json  text-generation.ipynb  tg_update.json
.amazonq/: mcp.json
NiaSanchezBot/: README.md  samconfig.toml  template.yaml  test_bedrock.py
NiaSanchezBot/hello_world/: app.py  main.py  requirements.txt
